# nadlan-mcp

./: .dockerignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  MCP_NORMALIZATION_FIX.md  MIGRATION.md  PHASE5_SUMMARY.md  README.md  TASKS.md  TESTING.md  TEST_COVERAGE_REPORT.md  USECASES.md  check-quality.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_fastmcp_server.py  run_http_server.py  run_mcp_server.py  simple_mcp_server.py  start.prompt  start2.prompt
.cursor/plans/: PHASE3-REFACTORING.md  PHASE4.1-STATUS.md  PHASE5-STATUS.md  PLAN.md  TEST-UPDATE-STATUS.md
.github/workflows/: code-quality.yml  test.yml
examples/: README.md  basic_search.py  investment_analysis.py  market_analysis.py  valuation.py
nadlan_mcp/: __init__.py  config.py  fastmcp_server.py  govmap.py  main.py  mcp_server.py  simple_fastmcp_server.py
nadlan_mcp/govmap/: __init__.py  client.py  filters.py  market_analysis.py  models.py  outlier_detection.py  statistics.py  utils.py  validators.py
tests/: __init__.py  conftest.py  test_fastmcp_tools.py  test_govmap_client.py  test_mcp_tools_fast.py  vcr_config.py
tests/api_health/: README.md  __init__.py  test_govmap_api_health.py
tests/cassettes/: .gitignore
tests/e2e/: __init__.py  test_mcp_tools.py  test_mcp_tools_comprehensive.py
tests/fixtures/: autocomplete_response.json  neighborhood_deals.json  polygon_metadata.json  street_deals.json
tests/govmap/: test_filters.py  test_market_analysis.py  test_models.py  test_outlier_detection.py  test_statistics.py  test_utils.py  test_validators.py
